@startuml
title Budgetplanner – ER-Modell gemäss Projekt und Dozentenfeedback

skinparam linetype ortho
skinparam roundcorner 15
skinparam shadowing false
skinparam entity {
  BackgroundColor #FFFFFF
  BorderColor #333333
}

entity "USER" as User {
  * id : int <<PK>>
  --
  name : str
  email : str
}

entity "ACCOUNT" as Account {
  * id : int <<PK>>
  --
  user_id : int <<FK>>
  name : str
  account_type : str
  starting_balance_chf : float
}

entity "CATEGORY" as Category {
  * id : int <<PK>>
  --
  user_id : int <<FK>>
  name : str
  category_type : str <<income | expense>>
}

entity "TRANSACTION" as Transaction {
  * id : int <<PK>>
  --
  account_id : int <<FK>>
  category_id : int <<FK>>
  amount_chf : float
  transaction_type : str <<income | expense>>
  transaction_date : date
  description : str
}

entity "BUDGET" as Budget {
  * id : int <<PK>>
  --
  user_id : int <<FK>>
  category_id : int <<FK>>
  month : int <<1..12>>
  year : int
  limit_chf : float
  --
  UNIQUE(user_id, category_id, year, month)
}

User ||--o{ Account : owns
User ||--o{ Category : defines
User ||--o{ Budget : defines
Account ||--o{ Transaction : contains
Category ||--o{ Transaction : categorizes
Category ||--o{ Budget : has monthly limit

note right of Transaction
Kein budget_id-FK.
Eine Transaktion gehört nur zu
Konto und Kategorie.
end note

note bottom of Account
current_balance wird nicht gespeichert.
Berechnung: starting_balance_chf
+ Summe der Transaktionen.
end note

note bottom of Budget
spent_amount wird nicht gespeichert.
Berechnung: Summe der Ausgaben
pro category_id, year und month.
end note

@enduml
